Fix to prevent unnecessary scrollbar

--- a/styles.css
+++ b/styles.css
@@ -299,7 +299,7 @@ li:nth-child(7) {
   display: grid;
   grid-template-rows: 25px min-content 45px min-content;
   gap: 10px;
-  padding: 20px 2vw 5vh 2vw;
+  padding: 20px 2vw 0 2vw;
 }
 
 .side-content h3:nth-child(3) {
